--- a/.github/workflows/fetch-json.yml
+++ b/.github/workflows/fetch-json.yml
@@ -5,6 +5,9 @@ on:
     - cron: "0 23 * * *"   # Daily at 23:00 UTC / 7:00 SGT
   workflow_dispatch:
 
+permissions:
+  contents: write
+
 jobs:
   update-json:
     runs-on: ubuntu-latest
